--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,11 @@ main {
   overflow: hidden;
 }
 
+nav {
+  opacity: 0.8;
+  box-shadow: 0px -2px 19px 0px rgba(50, 50, 50, 0.125);
+}
+
 .sp-center {
     text-align: center;
 }
@@ -46,4 +51,15 @@ main {
         display: inline-block;
         line-height: 1.5;
     }
+}
+
+
+/**
+ *
+ * APPS
+ *
+ */
+
+.building-link {
+  cursor: pointer;
 }
