--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 @import "packery.css";
 @import "animations.new.css";
 
+
 main {
   width: 100%;
   overflow: hidden;
@@ -25,6 +26,14 @@ nav {
 .image-dimension {
     content: '';
     height: 320px;
+}
+
+.subtitle {
+  color: #252525;
+  text-transform: uppercase;
+  font-family: 'Gin', sans-serif;
+  font-size: 1.6rem;
+  font-weight: 900;
 }
 
 .title {
