--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,8 +7,8 @@ main {
   overflow: hidden;
 }
 
-nav {
-  opacity: 0.8;
+#main-menu {
+  opacity: 0.97;;
   box-shadow: 0px -2px 19px 0px rgba(50, 50, 50, 0.125);
 }
 
