Home page update
News restored, removed part about the project added colors

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -21,9 +21,9 @@ h5.modal-title {
   font-weight: 600;
 }
 
-#news {
+/*#news {
   display : none;
-}
+}*/
 
 .main-wrapper {
   position   : relative;
