Notification deletes and mark as read. New Ui sketch

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -236,3 +236,21 @@ main {
         -o-transition: 0.2s opacity cubic-bezier(0.785, 0.135, 0.150, 0.860) 0.1s;
            transition: 0.2s opacity cubic-bezier(0.785, 0.135, 0.150, 0.860) 0.1s;
  }
+
+.dropdown > .dropdown-menu {
+  opacity: 0;
+  -webkit-transition: 0.6s all;
+     -moz-transition: 0.6s all;
+      -ms-transition: 0.6s all;
+       -o-transition: 0.6s all;
+          transition: 0.6s all;
+}
+
+.dropdown.show > .dropdown-menu {
+  opacity: 1;
+  -webkit-transition: 1s all;
+     -moz-transition: 1s all;
+      -ms-transition: 1s all;
+       -o-transition: 1s all;
+          transition: 1s all;
+}
