--- a/public/css/teacher.css
+++ b/public/css/teacher.css
@@ -87,6 +87,32 @@
           transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .3s, 1s opacity ease-in-out .1s;
 }
 
+#comment-btn.panel-active {
+  opacity: 0;
+  -webkit-transform: translateX(-100%);
+      -ms-transform: translateX(-100%);
+          transform: translateX(-100%);
+
+  -webkit-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .4s, 1s opacity ease-in-out .1s;
+     -moz-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .4s, 1s opacity ease-in-out .1s;
+      -ms-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .4s, 1s opacity ease-in-out .1s;
+       -o-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .4s, 1s opacity ease-in-out .1s;
+          transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .4s, 1s opacity ease-in-out .1s;
+}
+
+#approve-btn.panel-active {
+  opacity: 0;
+  -webkit-transform: translateX(-100%);
+      -ms-transform: translateX(-100%);
+          transform: translateX(-100%);
+
+  -webkit-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .5s, 1s opacity ease-in-out .1s;
+     -moz-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .5s, 1s opacity ease-in-out .1s;
+      -ms-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .5s, 1s opacity ease-in-out .1s;
+       -o-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .5s, 1s opacity ease-in-out .1s;
+          transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .5s, 1s opacity ease-in-out .1s;
+}
+
 #save-btn {
   opacity: 1;
   -webkit-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .3s, 1s opacity ease-in-out .1s;
@@ -103,4 +129,22 @@
       -ms-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .4s, 1s opacity ease-in-out .1s;
        -o-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .4s, 1s opacity ease-in-out .1s;
           transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .4s, 1s opacity ease-in-out .1s;
+}
+
+#comment-btn {
+  opacity: 1;
+  -webkit-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .3s, 1s opacity ease-in-out .1s;
+     -moz-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .3s, 1s opacity ease-in-out .1s;
+      -ms-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .3s, 1s opacity ease-in-out .1s;
+       -o-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .3s, 1s opacity ease-in-out .1s;
+          transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .3s, 1s opacity ease-in-out .1s;
+}
+
+#approve-btn {
+  opacity: 1;
+  -webkit-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .2s, 1s opacity ease-in-out .1s;
+     -moz-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .2s, 1s opacity ease-in-out .1s;
+      -ms-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .2s, 1s opacity ease-in-out .1s;
+       -o-transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .2s, 1s opacity ease-in-out .1s;
+          transition: 0.6s transform cubic-bezier(0.785, 0.135, 0.150, 0.860) .2s, 1s opacity ease-in-out .1s;
 }
