First visit redirect to welcome page

--- a/resources/assets/admin/sass/_style.scss
+++ b/resources/assets/admin/sass/_style.scss
@@ -76,6 +76,11 @@ main {
 
 .box h3:first-child {
   padding-top: 0.5rem !important;
+  font-style: normal;
+  font-weight: 800;
+  letter-spacing: .01rem;
+  line-height: 52px;
+  text-transform: uppercase;
 }
 
 
