--- a/resources/assets/admin/sass/_style.scss
+++ b/resources/assets/admin/sass/_style.scss
@@ -128,7 +128,7 @@ main {
   border: 1px solid;
 }
 
-.form-yellow input {
+.form-blue input {
   background-color: #d9f5fc;
   border-radius: 0;
   border-top: none;
@@ -136,7 +136,7 @@ main {
   border-right: none;
 }
 
-.form-yellow input:focus {
+.form-blue input:focus {
   background-color: #a6dbe2;
   border-radius: 0;
   border-top: none;
