--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,6 +11,11 @@
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "node_modules/bootstrap/scss/bootstrap.scss";
 
+@import "navbar";
+@import "forms";
+@import "filters";
+
+
 [v-cloak] {
   display: none;
 }
