--- a/resources/assets/admin/sass/_style.scss
+++ b/resources/assets/admin/sass/_style.scss
@@ -1,3 +1,58 @@
+.full-height {
+    height: 100vh;
+}
+
+.flex-center {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.position-ref {
+    position: relative;
+}
+
+.top-right {
+    position: absolute;
+    right: 10px;
+    top: 18px;
+}
+
+.content {
+    text-align: center;
+}
+
+.m-b-md {
+    margin-bottom: 30px;
+}
+
+.feedback-popup {
+  position: fixed;
+  z-index: 2;
+  margin-left: -1rem;
+  top: 25%;
+  transform: translateY(-50%);
+}
+
+.frame {
+  box-shadow: 0px -2px 19px 0px rgba(50, 50, 50, 0.125);
+}
+
+/*
+ * BODY
+ */
+
+html, body {
+    color: #636b6f;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 200;
+    height: 100%;
+    margin: 0;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
 // Prevent modal to scroll on top
 body.modal-open {
     overflow: visible;
@@ -7,6 +62,11 @@ main {
   width: 100%;
   overflow: hidden;
 }
+
+
+/*
+ * MENU
+ */
 
 #main-menu {
   opacity: 0.97;
