--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -3,6 +3,10 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:200,300,400,600,900);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:900i);
 
+// Gotham font
+// $gotham-font-path: "public/fonts/gotham" !default;
+// @import "gotham";
+
 // Variables
 @import "variables";
 @import "normalize";
