--- a/resources/assets/admin/sass/_style.scss
+++ b/resources/assets/admin/sass/_style.scss
@@ -147,10 +147,14 @@ main {
 
 .box h3:first-child {
   padding-top: 0.5rem !important;
-  font-style: normal;
-  font-weight: 800;
-  letter-spacing: .01rem;
-  line-height: 52px;
+  // font-style: normal;
+  // font-weight: 800;
+  // letter-spacing: .01rem;
+  // line-height: 52px;
+  /* Frame Composer: */
+  // font-family: Raleway;
+  font-size: 28px;
+  line-height: 45.3px;
   text-transform: uppercase;
 }
 
