--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -1,38 +1,127 @@
+//
+// Section Title
+//
 
-/*
- *top menu navbar
- */
-
-#main-menu {
-  position: sticky;
-  top: 0;
-  height: 90px;
+.title-wrapper {
+  display: flex;
   flex-direction: row;
+  align-items: center;
+  padding: $spacer;
+
+  > .title {
+    font-family: $font-family-serif;
+    font-weight: 900;
+    text-transform: uppercase;
+    line-height: 2.83rem;
+    color: $black;
+    font-size: 1.75rem;
+    align-self: center;
+    margin: auto;
+  }
+
+  > .icon-right {
+    /* plus - FontAwesome: */
+    font-size: 1.25rem;
+    line-height: 2.02rem;
+  }
+}
+
+
+//
+// BOXES
+//
+
+.box {
+  width: 100%;
+
+  > .box-header {
+    font-family: $font-family-serif;
+    font-weight: 900;
+    text-transform: uppercase;
+    line-height: 2.83rem;
+    color: $black;
+    font-size: 1.75rem;
+    padding: $spacer;
+  }
+
+  > .box-body {
+    font-family: $font-family-serif;
+    font-size: 1rem;
+    color: #252525;
+    line-height: 1.62rem;
+    padding: $spacer;
+  }
+
+  > .box-btns {
+    padding-bottom: $spacer;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    > a, > button {
+      margin-left: ($spacer / 2);
+      margin-right: ($spacer / 2);
+    }
+  }
+
+  &.last {
+    margin-bottom: $spacer;
+  }
+
+  &.green {
+    >.box-header {
+      background-color: $tfc-dark-green;
+    }
+    >.box-body, &>.box-btns {
+      background-color: $tfc-green;
+    }
+
+  }
+  &.yellow {
+    >.box-header {
+      background-color: $tfc-dark-yellow;
+    }
+    >.box-body, &>.box-btns {
+      background-color: $tfc-yellow;
+    }
+  }
+  &.blue {
+    >.box-header {
+      background-color: $tfc-dark-blue;
+    }
+    >.box-body, &>.box-btns {
+      background-color: $tfc-blue;
+    }
+  }
+  &.orange {
+    >.box-header {
+      background-color: $tfc-dark-orange;
+    }
+    >.box-body, &>.box-btns {
+      background-color: $tfc-orange;
+    }
+  }
+}
+
+
+//
+// FOOTER
+//
+
+footer {
+  margin-top: $spacer;
+  width: 100%;
+  height: 90px;
   background-color: $nav-gray;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  > .footer-content {
+    align-self: center;
+    font-size: 12px;
+    color: $black;
+    line-height: 19.42px;
+  }
 }
-
-#main-menu .navbar-brand {
-  flex-direction: column;
-}
-
-// #main-menu .navbar-collapse {
-//   position: absolute;
-//   flex-direction: row;
-//   width: 100%;
-//   top: 90%;
-//   right: 0;
-//   background-color: lighten($nav-gray, 25%);
-//
-//   > ul {
-//     flex-direction: row;
-//     align-items: center;
-//
-//     > li {
-//       padding: 0;
-//     }
-//   }
-// }
-
-// #main-menu .nav-item {
-//   padding-left: 2rem;
-// }
