Main layout update and teacher update

--- a/resources/assets/sass/_grid.scss
+++ b/resources/assets/sass/_grid.scss
@@ -36,8 +36,16 @@
     margin-top: $spacer;
   }
 
+  .mb {
+    margin-bottom: $spacer;
+  }
+
   .pt {
     padding-top: $spacer;
+  }
+
+  .pb {
+    padding-bottom: $spacer;
   }
 
   .no-gutters {
