--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -103,7 +103,8 @@ $teal:        #5bc0de !default;
 $pink:        #ff5b77 !default;
 $purple:      #613d7c !default;
 
-$nav-gray:    rgb(247,247,247) !default;
+$nav-gray:        rgb(237,237,237) !default;
+$nav-gray-light:  rgb(247,247,247) !default;
 
 // Create grayscale
 $gray-dark:                 #292b2c !default;
