--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -20,9 +20,20 @@
   }
 
   > .icon-right {
-    /* plus - FontAwesome: */
     font-size: 1.25rem;
     line-height: 2.02rem;
+  }
+}
+
+.title-description {
+  background-color: $nav-gray-light;
+  font-size: $font-family-base;
+  color: $black;
+  padding: $spacer;
+
+  > p {
+    margin: 0;
+    padding: 0;
   }
 }
 
@@ -46,9 +57,9 @@
 
   > .box-body {
     font-family: $font-family-serif;
-    font-size: 1rem;
-    color: #252525;
-    line-height: 1.62rem;
+    font-size: $font-size-base;
+    color: $black;
+    line-height: $line-height-base;
     padding: $spacer;
   }
 
@@ -139,4 +150,30 @@ footer {
     color: $black;
     line-height: 19.42px;
   }
+
+  &.full {
+    padding-top: ($spacer * 2);
+    padding-bottom: ($spacer * 2);
+    height: auto;
+
+    > .row {
+      width: 100%;
+      margin-left: $spacer;
+      margin-right: $spacer;
+
+      > .col-md-4 {
+        > h3 {
+          text-transform: uppercase;
+        }
+      }
+    }
+  }
+
+  &.no-margin-top {
+    margin-top: 0;
+  }
+}
+
+#logo-footer {
+  width: 70%;
 }
