Networks and varoiuos panels

--- a/resources/assets/admin/sass/_style.scss
+++ b/resources/assets/admin/sass/_style.scss
@@ -43,9 +43,9 @@
  */
 
 html, body {
-    background-position: center center;
-    background-attachment: fixed;
-    background-size: cover;
+    // background-position: center center;
+    // background-attachment: fixed;
+    // background-size: cover;
 }
 
 // Prevent modal to scroll on top
@@ -64,7 +64,7 @@ main {
  */
 
 #main-menu {
-  opacity: 0.97;
+  // opacity: 0.97;
   box-shadow: 0 -2px 19px 0 rgba(50, 50, 50, 0.125);
 }
 
