--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -130,6 +130,18 @@
   }
 }
 
+//
+// CONFERENCE CONTAINER
+//
+
+.conference-container {
+  background-color: $nav-gray-light;
+  padding-left: ($spacer * 2);
+  padding-right: ($spacer * 2);
+  padding-top: $spacer;
+  padding-bottom: $spacer;
+}
+
 
 //
 // FOOTER
@@ -176,4 +188,15 @@ footer {
 
 #logo-footer {
   width: 70%;
+}
+
+body {
+  background-image: url('/img/helpers/bg-3.png');
+  background-clip: border-box;
+  background-position: center;
+  background-attachment: scroll;
+  background-repeat: repeat;
+  background-size: auto;
+  background-origin: border-box;
+  background-position: left;
 }
