--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -227,6 +227,40 @@ footer {
   width: 70%;
 }
 
+
+//
+// CHAT
+//
+
+.chat {
+  > .messages {
+    overflow-y: scroll;
+
+    > .messages-body {
+
+      > .message {
+        @include border-radius($spacer / 4);
+        margin-bottom: $spacer / 4;
+        padding-top: ($spacer / 4);
+        padding-bottom: ($spacer / 4);
+
+        > span {
+          padding-left: ($spacer / 2);
+        }
+      }
+
+      & .green {
+        background-color: $tfc-green;
+      }
+
+      & .yellow {
+        background-color: $tfc-yellow !important;
+      }
+    }
+  }
+}
+
+
 body {
   background-image: url('/img/helpers/bg-3.png');
   background-clip: border-box;
