--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -48,6 +48,7 @@
 
     > .video-example {
       max-width: 60%;
+      min-width: 60%;
       margin-left: auto;
       margin-right: auto;
       margin-bottom: $spacer;
@@ -55,6 +56,7 @@
 
     > .image-example {
       max-width: 60%;
+      min-width: 60%;
       margin-left: auto;
       margin-right: auto;
       margin-bottom: $spacer;
@@ -62,6 +64,7 @@
 
     > .image-example {
       max-width: 60%;
+      min-width: 60%;
       margin-left: auto;
       margin-right: auto;
       margin-bottom: $spacer;
