--- a/resources/assets/sass/_breadcrumb.scss
+++ b/resources/assets/sass/_breadcrumb.scss
@@ -1,3 +1,20 @@
+.breadcrumbs {
+  display: flex;
+  background-color: $breadcrumb-bg;
+
+  > .btns {
+    margin-left: auto;
+    margin-right: $spacer;
+    display: flex;
+
+    > .btn {
+      align-self: center;
+      margin-left: $spacer;
+    }
+  }
+}
+
+
 .breadcrumb {
   padding: $breadcrumb-padding-y $breadcrumb-padding-x;
   margin: 0;
