--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -93,6 +93,16 @@
     color: $black;
     font-size: 1.75rem;
     padding: $spacer;
+    display: flex;
+
+    > .title {
+
+    }
+
+    > .btns {
+      margin-left: auto;
+      position: relative;
+    }
   }
 
   > .box-body {
