--- a/resources/assets/sass/_modal.scss
+++ b/resources/assets/sass/_modal.scss
@@ -44,7 +44,7 @@
 .modal-dialog {
   position: relative;
   width: auto;
-  margin: $modal-dialog-margin;
+  margin: 0;
 }
 
 // Actual modal
@@ -58,7 +58,9 @@
   @include border-radius(0);
   @include box-shadow($modal-content-xs-box-shadow);
   // Remove focus outline from opened modal
+  min-height: 100vh;
   outline: 0;
+  align-items: center;
 }
 
 // Modal background
@@ -83,7 +85,13 @@
   justify-content: space-between; // Put modal header elements (title and dismiss) on opposite ends
   padding: $spacer;
   border-bottom: $modal-header-border-width solid $modal-header-border-color;
-  background-color: 'green';
+  width: 100%;
+}
+
+.modal-header::before {
+  background-color: #555555;
+  width: 100%;
+  position: absolute;
 }
 
 // Title text within header
@@ -103,6 +111,7 @@
   // when should there be a fixed height on `.modal-dialog`.
   flex: 1 1 auto;
   padding: $spacer;
+  width: 100%;
 }
 
 // Footer (for actions)
@@ -112,6 +121,7 @@
   justify-content: flex-end; // Right align buttons with flex property because text-align doesn't work on flex items
   padding: $spacer;
   border-top: $modal-footer-border-width solid $modal-footer-border-color;
+  width: 100%;
 
   // Easily place margin between footer elements
   > :not(:first-child) { margin-left: .25rem; }
@@ -129,6 +139,8 @@
 
 .modal-content {
   &.green {
+    background-color: $tfc-green;
+
     > .modal-header {
       background-color: $tfc-dark-green;
     }
@@ -141,6 +153,8 @@
   }
 
   &.yellow {
+    background-color: $tfc-yellow;
+
     > .modal-header {
       background-color: $tfc-dark-yellow;
     }
@@ -153,6 +167,8 @@
   }
 
   &.blue {
+    background-color: $tfc-blue;
+
     > .modal-header {
       background-color: $tfc-dark-blue;
     }
@@ -165,6 +181,8 @@
   }
 
   &.orange {
+    background-color: $tfc-orange;
+
     > .modal-header {
       background-color: $tfc-dark-orange;
     }
@@ -181,17 +199,46 @@
 @include media-breakpoint-up(sm) {
   // Automatically set modal's width for larger viewports
   .modal-dialog {
-    max-width: $modal-md;
-    margin: $modal-dialog-sm-up-margin-y auto;
+    max-width: 100%;
+    margin: 0;
   }
 
   .modal-content {
     @include box-shadow($modal-content-sm-up-box-shadow);
   }
 
-  .modal-sm { max-width: $modal-sm; }
+  .modal-sm {
+    max-width: 100%;
+  }
 }
 
 @include media-breakpoint-up(lg) {
-  .modal-lg { max-width: $modal-lg; }
+  .modal-lg {
+    max-width: 100%;
+  }
+}
+
+
+@include media-breakpoint-up(sm) {
+  .modal-header, .modal-body, .modal-footer {
+    max-width: 540px;
+  }
+}
+
+@include media-breakpoint-up(md) {
+  .modal-header, .modal-body, .modal-footer {
+    max-width: 720px;
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  .modal-header, .modal-body, .modal-footer {
+    max-width: 960px;
+  }
+}
+
+@include media-breakpoint-up(xl) {
+  .modal-header, .modal-body, .modal-footer {
+    max-width: 1140px;
+  }
 }
